--- a/01/index.html
+++ b/01/index.html
@@ -51,23 +51,35 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='./images/RO.ME.png'>
       <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+        RO.ME: "3 Dreams of Black" (2011) is an interactive video that ran 
+        completely in a web browser without any plugins. It used 3d scenes, and camera 
+        movement to show that the open web could also handle interactive graphics like that.  
+        In 2011, most 3D videos on the web used flash. RO.ME showed that WebGL could create stories 
+        and complex visuals on a browser itself.
       </p>
-      <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
-      </p>
-      <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
-      </p>
+      <p id='technology'> 
+      Technology: HTML5, Javascript, WebGL, Google Chrome, Three.js  </p>
+      <p id='comparison'><a href="https://www.awwwards.com/inspiration/blob-mixer-creating-and-sharing-3d-blobs" target="_blank">Blob Mixer - Creating and sharing 3D blobs from </a>
+      Comparison: RO.ME is like an early WebGL music video where the camera 
+      moves on its own and there are visuals to connect everything. Blob Mixer is very
+       different becasue it lets you play around by changing the 3D blob. You can change
+        the shape to however you want. The blob mixer is experimental while RO.ME is 
+        more about watching an artistic movie.  </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
-      </p>
+      Significance (AI): According to ChatGPT, RO.ME was a milestone because it proved that WebGL 
+      and HTML5 could deliver cinematic 3D graphics right in the browser without plugins. It inspired 
+      future interactive art and set the stage for modern web experiences. - ChatGPT </p>
 
       <div id='bonus'>
-        <!-- TODO: BONUS TASK GOES HERE -->
+        <h2>Bonus</h2>
+        <iframe class="viewer" src="viewer.html?files/models/life_soup/birdsA_eagle.gltf"></iframe>
+        <iframe class="viewer" src="viewer.html?files/models/life_soup/quadruped_fox.gltf"></iframe>
+        <iframe class="viewer" src="viewer.html?files/models/life_soup/quadruped_horse.gltf"></iframe>
+
+        <p>
+      
       </div>
 
     </div>
