--- a/01/index.html
+++ b/01/index.html
@@ -77,8 +77,11 @@
         <iframe class="viewer" src="viewer.html?files/models/life_soup/birdsA_eagle.gltf"></iframe>
         <iframe class="viewer" src="viewer.html?files/models/life_soup/quadruped_fox.gltf"></iframe>
         <iframe class="viewer" src="viewer.html?files/models/life_soup/quadruped_horse.gltf"></iframe>
-
+        
         <p>
+          Animations from 
+      <a href="https://github.com/mrdoob/rome-gltf" target="_blank">mrdoob/rome-gltf</a> 
+    (licensed CC BY-NC-SA 3.0). </p>
       
       </div>
 
