--- a/01/index.html
+++ b/01/index.html
@@ -39,6 +39,16 @@
       #bonus {
         width: 100%;
       }
+      #content {
+				display: inline-block;
+				width: 800px;
+			}
+			.viewer {
+				border: 0px;
+				width: 200px;
+				height: 200px;
+				padding: 10px;
+			}
 
     </style>
   </head>
@@ -80,6 +90,9 @@
 
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
+          <iframe class="viewer" src="viewer.html?Models/alligator.gltf"></iframe>
+          <iframe class="viewer" src="viewer.html?Models/birds_raven.gltf"></iframe>
+          <iframe class="viewer" src="viewer.html?Models/birds_vulture.gltf"></iframe>
       </div>
 
     </div>
