--- a/01/index.html
+++ b/01/index.html
@@ -88,6 +88,8 @@
        technology it displayed, such as the D&AD Yellow Pencil for animation/digital design in 2012! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
+      <!-- Code for bonus referenced from here:
+       https://github.com/mrdoob/rome-gltf -->
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
           <iframe class="viewer" src="viewer.html?Models/alligator.gltf"></iframe>
