--- a/01/index.html
+++ b/01/index.html
@@ -54,7 +54,7 @@
       <img id='screenshot' src='../Images/Screenshot 2025-09-09 170610.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!. I saw this and was amazed to see this eincredible WebGL demo with interactable features. 
+      RO.ME is an incredible WebGL demo!. This WebGL website is an insight into 3 dreams, the dreams have been visualized as an interactive 3D world. It's like a music video made for the browser. 
       </p>
       <p id='technology'>
       Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
