--- a/01/index.html
+++ b/01/index.html
@@ -52,9 +52,10 @@
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
       <img id='screenshot' src='../Images/Screenshot 2025-09-09 170610.png'>
+      <br>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      <br> RO.ME is an incredible WebGL demo!. This WebGL website is an insight into 3 dreams, the dreams have been visualized as an interactive 3D world. It's like a music video made for the browser. 
+      RO.ME is an incredible WebGL demo!. This WebGL website is an insight into 3 dreams, the dreams have been visualized as an interactive 3D world. It's like a music video made for the browser. 
       </p>
       <p id='technology'>
       Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
