--- a/01/index.html
+++ b/01/index.html
@@ -51,8 +51,7 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='../Images/Screenshot 2025-09-09 170610.png'>
-      <br>
+      <img id='screenshot' src='../Images/Screenshot 2025-09-09 170610.png' alt="RO.ME pic">
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
       RO.ME is an incredible WebGL demo!. This WebGL website is an insight into 3 dreams, the dreams have been visualized as an interactive 3D world. It's like a music video made for the browser. 
