Added tech used

--- a/01/index.html
+++ b/01/index.html
@@ -54,12 +54,12 @@
       <img id='screenshot' src='../Images/Screenshot 2025-09-09 170610.png' alt="RO.ME pic">
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      .                    RO.ME is an incredible WebGL demo!. This WebGL website is an insight into 3 dreams, the dreams have been visualized as an interactive 3D world. It's like a music video made for the browser. The models are being rendered in real time depending on where the user looks to.
+      RO.ME is an incredible WebGL demo!. This WebGL website is an insight into 3 dreams, the dreams have been visualized as an interactive 3D world. It's like a music video made for the browser. The models are being rendered in real time depending on where the user looks to.
       RO.ME demo was created in 2011 and it was the first of its kind where a browser with WebGL was used to make immersive 3D graphics visible on our machines using our integrated graphics card. It showed that just with a simple tool like WebGL, such interactable and real things could come to life. 
-      This really opened the door for creativity when it comes to web design.  
+      This really opened the door for creativity when it comes to web design fusing audio, video, real-time rendering etc.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: In this RO.ME demo, the primary technology used is HTML 5 combined with CSS for styling. Both these were handled under JavaScript and WebGL was the main highlight of this demo integrating audio, video and real time rendering really made this website a delight to go through! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
       Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
