--- a/01/index.html
+++ b/01/index.html
@@ -59,7 +59,7 @@
       This really opened the door for creativity when it comes to web design fusing audio, video, real-time rendering etc.
       </p>
       <p id='technology'>
-      Technology: In this RO.ME demo, the primary technology used is HTML 5 combined with CSS for styling. Both these were handled under JavaScript and WebGL was the main highlight of this demo integrating audio, video and real time rendering really made this website a delight to go through! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      <em>Technology: </em>In this RO.ME demo, the primary technology used is HTML 5 combined with CSS for styling. Both these were handled under JavaScript and WebGL was the main highlight of this demo integrating audio, video and real time rendering really made this website a delight to go through! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
       Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
