Added the hyperlink

--- a/01/index.html
+++ b/01/index.html
@@ -62,7 +62,9 @@
       <em>Technology: </em>In this RO.ME demo, the primary technology used is HTML 5 combined with CSS for styling. Both these were handled under JavaScript and WebGL was the main highlight of this demo integrating audio, video and real time rendering really made this website a delight to go through! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: The WebGL website I visited was: <a href="https://www.no-fishing.net/">Fishing Net Impact</a>
+      This was a website that discussed the impact of fishing nets around the world and its deadly impact on the marine life. 
+
       </p>
       <p id='ai'>
       Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
