Added the more comparisons

--- a/01/index.html
+++ b/01/index.html
@@ -63,7 +63,8 @@
       </p>
       <p id='comparison'>
       Comparison: The WebGL website I visited was: <a href="https://www.no-fishing.net/">Fishing Net Impact</a>
-      This was a website that discussed the impact of fishing nets around the world and its deadly impact on the marine life. 
+      This was a website that discussed the impact of fishing nets around the world and its deadly impact on the marine life. This website involved interacting with a globe to see the impact of nets throughout the world along with a slider button that would tell us the impact of donations on the fishing nets. 
+      RO.ME, on the other hand integrates 3D models, videos and interactable elements that are there for artistic purposes. 
 
       </p>
       <p id='ai'>
