Added the ai part emphasis

--- a/01/index.html
+++ b/01/index.html
@@ -68,7 +68,7 @@
 
       </p>
       <p id='ai'>
-      Significance (Written by Chat-GPT):  It was important as it marked a turning point in web technology, it showed the world that browsers could deliver real time 3D graphics, sound, and interactivity without requiring plugins like Flash or Unity. By combining WebGL, HTML5, and JavaScript, it proved the web could be a platform for cinematic storytelling and complex multimedia experiences.<!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      <em>Significance (Written by Chat-GPT): </em> It was important as it marked a turning point in web technology, it showed the world that browsers could deliver real time 3D graphics, sound, and interactivity without requiring plugins like Flash or Unity. By combining WebGL, HTML5, and JavaScript, it proved the web could be a platform for cinematic storytelling and complex multimedia experiences.<!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
       <div id='bonus'>
