--- a/01/index.html
+++ b/01/index.html
@@ -62,7 +62,7 @@
       <em>Technology: </em>In this RO.ME demo, the primary technology used is HTML 5 combined with CSS for styling. Both these were handled under JavaScript and WebGL was the main highlight of this demo integrating audio, video and real time rendering really made this website a delight to go through! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
-      Comparison: The WebGL website I visited was: <a href="https://www.no-fishing.net/">Fishing Net Impact</a>
+      <em>Comparison: </em> The WebGL website I visited was: <a href="https://www.no-fishing.net/">Fishing Net Impact</a>
       This was a website that discussed the impact of fishing nets around the world and its deadly impact on the marine life. This website involved interacting with a globe to see the impact of nets throughout the world along with a slider button that would tell us the impact of donations on the fishing nets. 
       RO.ME, on the other hand integrates 3D models, videos and interactable elements that are there for artistic purposes. 
 
