--- a/01/index.html
+++ b/01/index.html
@@ -71,8 +71,14 @@
       </p>
 
       <div id='bonus'>
-        <iframe class="viewer" src="viewer.html?alligator.gltf"></iframe>
+        <span id="content">
+
+        <iframe class="viewer" src="viewer.html?files/models/black_soup/alligator.gltf"></iframe>
+        <iframe class="viewer" src="viewer.html?files/models/black_soup/birds_raven.gltf"></iframe>
+        <iframe class="viewer" src="viewer.html?files/models/black_soup/birds_vulture.gltf"></iframe>
         <!-- TODO: BONUS TASK GOES HERE -->
+        </span>
+        3D Model Credit: MrDoob
       </div>
 
     </div>
