Added model to the index.htm;

--- a/01/index.html
+++ b/01/index.html
@@ -73,6 +73,8 @@
 
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
+        <iframe src="/models/black_soup/alligator.gltf" width="400" height="300"></iframe>
+
       </div>
 
     </div>
