--- a/01/index.html
+++ b/01/index.html
@@ -73,10 +73,8 @@
 
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
-        <iframe src="/models/black_soup/alligator.gltf" width="400" height="300"></iframe>
-        <p style="font-size:.9em;">
-          Viewer and models adapted from <a href="https://github.com/mrdoob/rome-gltf" target="_blank">mrdoob/rome-gltf</a>.
-        </p>
+        <iframe src="/viewer.html?model=models/black_soup/alligator.gltf" width="400" height="300"></iframe>
+        
       </div>
 
     </div>
