corrected model line

--- a/01/index.html
+++ b/01/index.html
@@ -73,8 +73,10 @@
 
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
-        <iframe src="/viewer.html?model=models/black_soup/alligator.gltf" width="400" height="300"></iframe>
-        
+        <iframe src="/viewer.html#model=models/black_soup/alligator.gltf" width="400" height="300"></iframe>
+        <iframe src="/viewer.html#model=models/life_soup/fishA.gltf" width="400" height="300"></iframe>
+        <iframe src="/viewer.html#model=models/life_soup/birdsA_eagle.gltf" width="400" height="300"></iframe>
+
       </div>
 
     </div>
