--- a/01/index.html
+++ b/01/index.html
@@ -73,7 +73,7 @@
 
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
-        <iframe src="/viewer.html?model=01/models/black_soup/alligator.gltf" width="400" height="300"></iframe>
+        <iframe src="https://manikatlantis.github.io/cs460student/viewer.html?model=/cs460student/01/models/black_soup/alligator.gltf" width="400" height="300"></iframe>
         <iframe src="/viewer.html?model=01/models/life_soup/fishA.gltf" width="400" height="300"></iframe>
         <iframe src="/viewer.html?model=01/models/life_soup/birdsA_eagle.gltf" width="400" height="300"></iframe>
 
