path model update

--- a/01/index.html
+++ b/01/index.html
@@ -75,11 +75,11 @@
         <h2>Bonus Part</h2>
         <!-- TODO: BONUS TASK GOES HERE -->
         <iframe class="viewer"
-          src="../viewer.html?files/models/black_soup/alligator.gltf" width="400" height="300"></iframe>
+          src="viewer.html?files/models/black_soup/alligator.gltf" width="400" height="300"></iframe>
         <iframe class="viewer"
-          src="../viewer.html?files/models/life_soup/fishA.gltf" width="400" height="300"></iframe>
+          src="viewer.html?files/models/life_soup/fishA.gltf" width="400" height="300"></iframe>
         <iframe class="viewer"
-          src="../viewer.html?files/models/life_soup/birdsA_eagle.gltf" width="400" height="300"></iframe>
+          src="viewer.html?files/models/life_soup/birdsA_eagle.gltf" width="400" height="300"></iframe>
 
       </div>
 
