--- a/01/index.html
+++ b/01/index.html
@@ -50,20 +50,23 @@
 
     <div class='demo'>
 
-      <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <!-- A screenshot of RO.ME -->
+      <img id='screenshot' src='./RO.ME_screenshot.png'>
+      <!-- A description of what I thought of RO.ME-->
       <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      I think that RO.ME was very advanced for its time. Looking at it now, it is still cool, but the quality of graphics is lower than most things you see around, but this was the first of its kind. It still is very cool, and it was a very good demonstration to the world of what WebGL is capable of. I'm sure that it inspired many people, as it has inspired me. 
       </p>
+      <!-- Some of the technologies used to make RO.ME -->
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Some of the technologies used to make RO.ME were WebGL, HTML5, and Three.js. 
       </p>
+      <!-- A comparison of RO.ME with another WebGL example -->
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      The other example I chose to compare with RO.ME is <a href="https://wldlght.com/#">WLDLIGHT</a>. In this example you have more control over what happens, but it also feels much emptier than RO.ME did. The graphics also feel much more pollished in this, but that is to be expected considering it was made ten years later. 
       </p>
+      <!-- A summary of asking an AI about the significance of RO.ME -->
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      I asked ChatGPT about the significance of RO.ME, and it had three main reasons that it i important. Number one, it used WebGL to create 3D rendering directly in the browser, no download necesarry, and was one of the first projects to do that. Number two, it was across disciplines; it combined music, animation and storytelling to create an interactive piece of art. Number three, it influenced many future digital experiences, such as digital art galleries and virtual reality. 
       </p>
 
       <div id='bonus'>
