--- a/01/index.html
+++ b/01/index.html
@@ -69,8 +69,11 @@
       I asked ChatGPT about the significance of RO.ME, and it had three main reasons that it i important. Number one, it used WebGL to create 3D rendering directly in the browser, no download necesarry, and was one of the first projects to do that. Number two, it was across disciplines; it combined music, animation and storytelling to create an interactive piece of art. Number three, it influenced many future digital experiences, such as digital art galleries and virtual reality. 
       </p>
 
+      <!-- Bonus work -->
       <div id='bonus'>
-        <!-- TODO: BONUS TASK GOES HERE -->
+        <iframe class="viewer" src="https://mrdoob.github.io/rome-gltf/viewer.html?files/models/life_soup/quadruped_fox.gltf"></iframe>
+        <iframe class="viewer" src="https://mrdoob.github.io/rome-gltf/viewer.html?files/models/life_soup/quadruped_frog.gltf"></iframe>
+        <iframe class="viewer" src="https://mrdoob.github.io/rome-gltf/viewer.html?files/models/life_soup/fishA.gltf"></iframe>
       </div>
 
     </div>
