--- a/01/index.html
+++ b/01/index.html
@@ -40,6 +40,11 @@
         width: 100%;
       }
 
+      .whitelink {
+        color: white;
+        text-decoration: underline;
+      }
+
     </style>
   </head>
   <body>
@@ -51,19 +56,22 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='rome.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      I would describe this demo as artistic and very dreamlike. The dev team definitely accomplished the feeling they were going for. The contrast of color from the dark broken down city into the slow unveiling of the usage of the bright 3D models was awesome. Seeing renditions of dreams is always so cool to see and I thought that their vision was very interesting. The train tracks scene with the buffalos and flying around at the end seeing the upside down city were fun to experience!    
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: The techologies used are WebGL, Three.js and HTML  <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      <a href="https://le-voyage-azarien.art/" target="_blank" class="whitelink"> 
+          Le Voyage Azarien
+      </a> is a story about a man and the lessons he’s learned from trees. I thought it was written thoughtfully and put beautifully 
+      Comparison: This work is much quieter and not about showing off any anything but rather tell a more intimate story. It uses a what looks like 2D dots but in different colors and shades in a 3D space to paint the full form of a tree and landscapes. Both videos have that on rails experience however this video simply rotates around whats being shown rather than moving through the world.   <!-- TODO: FILL IN THE COMPARISON -->
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): According to ChatGPT, RO.ME was the first ever WebGL film created. While showcasing the power and potential of modern browser graphics, this video demmonstrated immersive story telling all from within a browser. It sparked a lot of interest and pulled people in to what WebGL could offer. <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
       <div id='bonus'>
