asst1: Part 4–6 completed (description, tech, comparison, screenshot)

--- a/01/index.html
+++ b/01/index.html
@@ -51,19 +51,21 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='images/rome.jpg' alt='RO.ME Screenshot'>
       <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+        RO.ME is an interactive WebGL experience released in 2011. It mixes music, art, and 3D animation in the browser. You can explore different scenes while the song “3 Dreams of Black” plays, and at some points, you even control the camera. It was one of the first projects to show what WebGL could really do on the web.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+        This project was built using WebGL for 3D graphics, JavaScript for interactions, HTML5, and shaders for visual effects. It also used 3D models and textures to bring the scenes to life.
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+        I compared RO.ME with <a href="https://intothetrenches.1917.movie/" target="_blank">1917: Into the Trenches</a>.  
+        RO.ME blends art, music, and 3D visuals in a cinematic way. This one puts you inside realistic WWI trenches you're walking through sets and seeing how the movie was made.
+        Both use WebGL, but RO.ME is dreamy and storytelling focused, while 1917 is more immersive and feels like a virtual tour.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+        RO.ME was one of the first big projects to show how powerful WebGL could be.  
+        It mixed music, animation, and 3D visuals in a way that made people realize browsers could handle cinematic, interactive experiences without plugins.
       </p>
 
       <div id='bonus'>
