--- a/01/index.html
+++ b/01/index.html
@@ -50,20 +50,19 @@
 
     <div class='demo'>
 
-      <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      
+      <img id='screenshot' src='rome.png'>
       <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME: 3 Dreams of Black is an interactive story made for the web in 2011. It lets users explore a dream-like world while music plays in the background. You can fly through different scenes that match the song’s mood. It was one of the first projects to use WebGL, a new technology at the time, to show 3D graphics in the browser without using Flash. This project proved that you could create rich and creative experiences directly in the browser using only web code.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: WebGL, Three.js, JavaScript, HTML5
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      I compared RO.ME with <a href="https://www.sgrappa.com" target="_blank">Sgrappa</a>, which is a creative product website for beverages. RO.ME tells a story through music and 3D flying scenes using WebGL, while Sgrappa uses black-and-white design with colorful product visuals and funky text styles. Sgrappa has smooth scroll-based animations and busy layouts that change as you move the mouse. It also includes 3D-like objects and loads very quickly. While RO.ME is artistic and cinematic, Sgrappa is stylish and focused on design and product presentation.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      RO.ME was one of the first big WebGL demos that showed 3D graphics, music, and interaction could all work smoothly in a browser with no plugins. It helped start the WebGL movement. (Answer from ChatGPT)
       </p>
 
       <div id='bonus'>
