--- a/01/index.html
+++ b/01/index.html
@@ -51,19 +51,25 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='rome-screenshot.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME was an interactive music video of teh song "Black" which followed 3 types of dreams and followed the lyrics of the song that was playing. It uses different types of art styles to follow the 3 types of dreams. RO.ME was very visually intense and interesting. At first I didn't really understand in which ways that it was interactive. For example, when I first watched what was happening I was clicking and moving my mouse to see how my movements were affecting the images. I thought my clicks were making the blinking happen which reminded me of another game (Before your eyes) I know where your blinks in real life are connecetd to the blinks in the game and how everytime you blink it would change to a new storyline and dream similar to the story in the RO.ME music video. I also didn't realize when I was interacting with the demo the first time that holding and clicking was making the darkness and animals appear; I thought my mouse was just making it blurry/geometrically hazy. I find it crazy that this was made at least 14 years ago. I don't even think videos were as clear as this demo was back then. I'm surprised that I haven't heard of WebGL before this class, as I'm sure this technology has impacted a lot of other platforms such as game engines and video platforms.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+
+      Some of the technologies used were 2 graphics, video, 3d graphics. It's made on WebGL creating 3D visuals using code and basically changes your browser into an video game console.
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: <!-- TODO: FILL IN THE COMPARISON -->
+
+      A good example of a WebGL website is the <a href="https://www.no-fishing.net/" target="_blank">"Sea Sheapherd - No fishing net"</a> by makemepulse and Brand Station. It shows an amazing globe which you can move around to go to different ships. Once clicking the ships information pops up on the right side about how these ships are helping the ocean and conservation. Just like RO.ME, this interactive piece also has a video playing before the interactive play comes in. Although it does have some similarities with RO.ME, I would say that it has more differences. While RO.ME was music and art focused, No fishing is more information focused thus the art isn't too "in your face" and doesn't overwhelm the information given.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+
+      When asked, This is what ChatGPT said about the significance of RO.ME, "RO.ME “Three Dreams of Black” was important because it proved that complex, interactive 3D experiences could run directly in the browser using only open web standards like WebGL and HTML5. It blended art, music, and technology, showing the web could be a medium for storytelling and real-time graphics without plugins, and it inspired a new wave of creative WebGL projects."
       </p>
 
       <div id='bonus'>
