--- a/01/index.html
+++ b/01/index.html
@@ -1,1 +1,28 @@
-
+<!doctype html><html><body><h1>CS460 – Gulisumuayi</h1></body></html>
+<p id="description">
+  Ro.ME was probably the coolest interactice music video i watched. it was made around 2011
+  where you can explore different 3D dreams world while listing to music. I'm fascinated that this was made
+  in 2011, how they were able to put together music, story, and an interactive experience all into this WebGL demo. 
+  seeing the bird move with my mouse and the camera flow with the music was amazing. Its impact was 
+  showing people that browsers could handle real-time 3D and storytelling without plugins, 
+  and it inspired many later projects that used WebGL for creative work on the web.
+</p>
+<p id="technology">
+  the Ro.ME demo was built with WebGL for the 3D graphics. It also used HTML, JavaScript, CSS
+  to connect
+  the scenes and interaction.
+</p>
+<p id="comparison">
+  I compared RO>ME with <a href="https://blobmixer.14islands.com/" target="_blank" rel="noopener">Blobmixer</a>. 
+  Ro.ME is more of a interactive music video white stories and exproloring. Blobmixer is more playful, it 
+  also reacts with physcis and soft movements. And of course, Blobmixer has way better graphics.
+</p>
+<p id="ai">
+  Significance (AI): RO.ME was a milestone in web-based computer graphics because it demonstrated that 
+  high-quality, interactive 3D environments could run in a browser without plugins. It combined complex geometry, 
+  shaders, lighting, and audio to create an immersive experience. RO.ME showed the world that the web could be a platform 
+  for professional-grade creative work, accessible to anyone with an internet connection. Its technical innovation and artistic 
+  vision inspired a new generation of web-based 3D experiences, proving that the browser could support real-time interactive graphics.
+</p>
+</body>
+</html>
