--- a/01/index.html
+++ b/01/index.html
@@ -46,31 +46,50 @@
 
     <img id='cube' src='https://cs460.org/gfx/cube.png'>
 
-    <h1>RO.ME "3 DREAMS OF BLACK"</h1>
-
+    <h1><a href="http://ro.me/">RO.ME</a> 
+      "3 DREAMS OF BLACK"</h1>
     <div class='demo'>
 
-      <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <!-- Screenshot 1 -->
+      <img id='screenshot' src='rome1.png'>
+      <p id="Opening scene: person climbing train">
+
+      <!-- Screenshot 2 -->
+      <img id='screenshot2' src='rome2.png'>
+      <p id="Model creator: Moose in Motion">          
+<p>First impression 1 is an opening scene where the person 
+  climbs onto the train which sets the tone of the experience. 
+  It feels cinematic yet interactive and shows how WebGL 
+  can blend story with graphics.</p>
       <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+<p>Second impression explores the “Moose in Motion” model in the 
+  creator which shows how WebGL can handle real-time animation. 
+  The moving figure gives a sense of life and highlights how 
+  assets and motion data are streamed directly into the browser.</p>
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
-      </p>
+      Technology: RO.ME was built in 2011 as a Google Creative Lab 
+        project with Chris Milk. It uses WebGL for 3D rendering, 
+        Three.js as the library backbone, Blender for asset export,
+        and was released open source on Google App Engine.
+  </p>      
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: Unlike simple graphics demos such as a static cube, 
+        RO.ME combines story, music, and interactivity. The 
+        “Moose in Motion” model shows animation and movement streamed 
+        live in the browser, something far beyond a basic shape.   
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): Using ChatGPT helped me organize the Technology 
+        section and write clear reflections about what I saw on the site. 
+        It also reminded me to only change the TODO sections, not the 
+        professor’s starter code.
+  </p>
       </p>
-
-      <div id='bonus'>
-        <!-- TODO: BONUS TASK GOES HERE -->
-      </div>
-
-    </div>
+  <div id='bonus'>
+    <!-- TODO: BONUS TASK GOES HERE -->
+  </div>
+</div>
 
   </body>
 </html>
