--- a/01/index.html
+++ b/01/index.html
@@ -23,6 +23,7 @@
   shaders, lighting, and audio to create an immersive experience. RO.ME showed the world that the web could be a platform 
   for professional-grade creative work, accessible to anyone with an internet connection. Its technical innovation and artistic 
   vision inspired a new generation of web-based 3D experiences, proving that the browser could support real-time interactive graphics.
+  Credit: ChatGPT
 </p>
 </body>
 </html>
