--- a/02/index.html
+++ b/02/index.html
@@ -1,2 +1,38 @@
-Ready for assignment 2.
+<html>
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
+    <head>
+        <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+    </head>
+    <body>
+        <script>
+            
+            const SIZE = 20;
+            const GAP = 10;
+            window.onload = function() {
+                var r = new X.renderer3D();
+                r.init();
+
+                for (var z=-5; z < 6; z++) {
+                    for (var y=-5; y < 6; y++) {
+                        for(var x=-5; x < 6; x++) {
+                            new_cube = new X.cube();
+                            new_cube.transform.translateX((SIZE + GAP) * x);
+                            new_cube.transform.translateY((SIZE + GAP) * y);
+                            new_cube.transform.translateZ((SIZE + GAP) * z);
+                            r.add(new_cube);
+                        }
+                    }
+                }
+
+                r.camera.position = [0,0,300];
+                r.render();
+            };
+
+        </script>
+    </body>
+</html>
 
