--- a/02/bonus/index.html
+++ b/02/bonus/index.html
@@ -19,40 +19,56 @@ Ready for assignment 2.
         <script>
 
 
+            // Helper function to generate a random number
             function generateRandomNumber(min, max) {
                 return (Math.floor(Math.random() * (max - min + 1)) + min) / 100;
             }
 
+            // Global variable to define SIZE, GAP, and SELECTED CUBE
             var SIZE = 10;
             var GAP = 20;
             var SELECTED_CUBE;
 
+            // Minimum and maximum values for the rgb values
             var MIN = 0;
             var MAX = 100;
 
+            // Global variable for spinning cubes
             let SPINNING = false;
+
+            // Global variables to control camera and cycling.
+            let CAMERAS = [];
+            let CAMERA_CYCLING = false;
+            let CAMERA_INTERVAL = null;
+            let CURRENT_CAMERA_INDEX = 0;
 
             window.onload = function() {
 
 
+                // Create new XTK renderer and initialize.
                 r = new X.renderer3D();
                 r.init();
 
-                // Generates 1,331 cubes (11^3)
+                // Generates 1,331 spheres (11^3)
                 for (let z = -5; z < 6; z++) {
                     for (let y = -5; y < 6; y++) {
                         for (let x = -5; x < 6; x++) {
-                            new_cube = new X.cube();
-                            new_cube.transform.translateX((SIZE + GAP) * x);
-                            new_cube.transform.translateY((SIZE + GAP) * y);
-                            new_cube.transform.translateZ((SIZE + GAP) * z);
+                            new_sphere = new X.sphere();
+                            new_sphere.transform.translateX((SIZE + GAP) * x);
+                            new_sphere.transform.translateY((SIZE + GAP) * y);
+                            new_sphere.transform.translateZ((SIZE + GAP) * z);
 
-                            r.add(new_cube);
+                            // Random size between 0.5 and 2.0 times the default radius
+                            let randomSize = 0.5 + Math.random() * 1.5;
+                            new_sphere.radius = SIZE * randomSize * 0.5;
+
+                            r.add(new_sphere);
                         }
                     }
                 }
 
 
+                // When mouse is hovered over a cube, select it as SELECTED_CUBE
                 r.interactor.onMouseMove = function(event) {
                     var cubeid = r.pick(event.offsetX, event.offsetY);
                     if (cubeid !== 0) {
@@ -61,6 +77,7 @@ Ready for assignment 2.
                     console.log(SELECTED_CUBE);
                 }
 
+                // Key down events.
                 window.onkeydown = function(event) {
                     if (event.key === 'q') {
                         SELECTED_CUBE.visible = false;
@@ -81,6 +98,29 @@ Ready for assignment 2.
                         download();
                     } else if (event.key === 'l') {
                         upload("scene.json");
+                    } else if (event.key === 'c') {
+                        // Store current camera position
+                        CAMERAS.push(new Float32Array(r.camera.view));
+                    } else if (event.key === 'v') {
+                        // Toggle camera cycling
+                        if (CAMERAS.length === 0) {
+                            console.log("No cameras stored! Press 'c' to store camera positions first.");
+                            return;
+                        }
+
+                        CAMERA_CYCLING = !CAMERA_CYCLING;
+
+                        if (CAMERA_CYCLING) {
+                            CURRENT_CAMERA_INDEX = 0;
+                            CAMERA_INTERVAL = setInterval(function() {
+                                r.camera.view = new Float32Array(CAMERAS[CURRENT_CAMERA_INDEX]);
+                                console.log("Switched to camera", CURRENT_CAMERA_INDEX + 1);
+                                CURRENT_CAMERA_INDEX = (CURRENT_CAMERA_INDEX + 1) % CAMERAS.length;
+                            }, 1000); // Switch every second
+                        } else {
+                            clearInterval(CAMERA_INTERVAL);
+                            CAMERA_INTERVAL = null;
+                        }
                     }
                 }
 
