Finished assignment 2 and bonus

--- a/01/index.html
+++ b/01/index.html
@@ -57,7 +57,7 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='./screenshot.png'>
+      <img id='screenshot' src='./images/screenshot.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
         RO.ME is a very cool webgl demo! It takes you through a first person perspective of someone exploring a ruined down city. 
@@ -73,7 +73,7 @@
         <div>WebGL</div>
       </p>
 
-      <img id="screenshot" src="./animalfutures.png"></img>
+      <img id="screenshot" src="./images/animalfutures.png"></img>
       <p id='comparison'>
         Comparison: <!-- TODO: FILL IN THE COMPARISON -->
         <a href="https://www.rspca.org.uk/webContent/animalfutures/">Animal Futures</a> is a cool interactive experience that takes the user
